# avt-scoreboard

./: LICENSE
backend/: Cargo.toml
frontend/: package.json
frontend/src/: App.jsx
