[package]
name = "avt-scoreboard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1"
derive_more = "0.99"
reqwest = "0.11"
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tap = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
